@@ -6,7 +6,7 @@
     whichModels = "withmain", iterations = 10000,
     progress = options()$BFprogress,
     rscaleFixed = "medium", rscaleRandom = "nuisance",
-    multicore = FALSE, method = "auto")
+    multicore = FALSE, method = "auto", noSample = FALSE)
 }
 \arguments{
   \item{formula}{a formula containing all factors to
@@ -39,6 +39,9 @@
 
   \item{method}{approximation method, if needed. See
   \code{\link{nWayAOV}} for details.}
+
+  \item{noSample}{if \code{TRUE}, do not sample, instead
+  returning NA.}
 }
 \value{
   An object of class \code{BFBayesFactor}, containing the
